# vibe_test

./: .gitignore  environment.py  main.py  mock_pipeline.py  pipeline.py  processes.py  pyproject.toml  test_mock_pipeline.py  test_processes.py
docs/: architecture.md
recipes/: recipe.json5
src/: environment.py  main.py  pipeline.py  processes.py  recipe.py  toolchain.py
tests/: test_pipeline.py  test_processes.py  test_recipe.py  test_toolchain.py
